--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,7 @@ body { background: #575757; font-family: 'Source Sans Pro', sans-serif; }
 #homepage-content, #homepage-content h2, #homepage-content h4  { color: #FFF; text-shadow: 0 1px 0 rgba(0,0,0,.3); }
 #homepage-content img { margin-top: 70px; }
 #homepage-content p { font-weight: 300; }
+#footer { padding: 30px; color: #FFF; border-top: 1px solid rgba(255,255,255,.2); margin-top: 30px;}
 /* Widet Styling */
 .widget { background: #353535 url(../img/widget-bckg.jpg) repeat-x top center; border-radius: 5px; color: #FFF; padding: 10px; margin-bottom: 10px; }
 .widget h2 { color: #444; text-shadow: 0 1px 0 rgba(255,255,255,.3); font-size: 12pt; margin: 0 0 30px 0; font-weight: 700; }
